--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.4.1",
+    "mongoose-unique-validator": "^5.0.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
