--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^8.4.1",
     "mongoose-unique-validator": "^5.0.0",
     "next": "14.2.3",
+    "next-cloudinary": "^6.6.2",
     "react": "^18",
     "react-dom": "^18"
   },
