--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "14.2.3",
     "next-cloudinary": "^6.6.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "slugify": "^1.6.6",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "eslint": "^8",
