--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.11",
     "mongoose": "^8.4.1",
     "mongoose-unique-validator": "^5.0.0",
     "next": "14.2.3",
