feat: Update ShareMealPage component with error handling

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
     "@vercel/speed-insights": "^1.0.11",
     "mongoose": "^8.4.1",
     "mongoose-unique-validator": "^5.0.0",
